Fix z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,7 @@ body {
 }
 
 .button-style {
+  z-index: 1;
   background-color: rgb(255, 0, 0);
   /* border-style: solid; */
   /* border-radius: 30px;
@@ -1121,10 +1122,6 @@ p {
   border-width: 10px;
     background-color: rgb(48, 101, 106)
   }
-
-  /* .compass, nav, .button, #fixed-image {
-    display: none;
-  } */
 
 .text-align-center {
   text-align: center;
